Sidebar - Fix regression in sidebar and made gray darker on mobile dropdown

--- a/src/scss/base/_reset_docusaurus.scss
+++ b/src/scss/base/_reset_docusaurus.scss
@@ -42,6 +42,10 @@ We must use `!important` at times to override some default styles.
   background: url("@site/static/svg/common/chevron_up.svg");
 }
 
+.menu__link--active {
+  background-color: inherit !important;
+}
+
 .menu {
   padding-left: var(--ifm-menu-link-padding-horizontal);
   @media screen and (min-width: variables.$screen-md) {
@@ -93,6 +97,13 @@ We must use `!important` at times to override some default styles.
   &:hover,
   & > a {
     transition: none !important;
+    background-color: variables.$mina-gray-light;
+  }
+}
+
+.menu__list-item-collapsible {
+  &:hover {
+    background-color: variables.$mina-gray-light;
   }
 }
 
